# papaya-ppTRACLUS

./: LICENSE  client_Dockerfile  readme.md  server1_Dockerfile  server2_Dockerfile
client/: CMakeLists.txt  Dockerfile  app.py  readme.md
common/: client.cpp  client.py  client1.py  pptraclus-v2.cpp  pptraclus.cpp  pptraclus.h  pptraclus_c.cpp  server.cpp  server.py  server1.py
data/: approx.py  example_route_cleaned.csv  logs.txt  network.py  out.txt  p.py  tester.py  testeribm.py
data/tests/: 10-v3.txt  100-v3.txt  110-v3.txt  120-v3.txt  20-v3.txt  30-v3.txt  40-v3.txt  50-v3.txt  60-v3.txt  70-v3.txt  80-v3.txt  90-v3.txt  plot1.py
data/tests/argentera/: plot1.py  time.txt  timev4.txt  v3100-v3.txt  v3150-v3.txt  v3200-v3.txt  v3250-v3.txt  v3300-v3.txt  v3350-v3.txt  v3400-v3.txt  v3450-v3.txt  v350-v3.txt  v3500-v3.txt  v3550-v3.txt  v3600-v3.txt  v3650-v3.txt  v3700-v3.txt  v3750-v3.txt  v3800-v3.txt  v3850-v3.txt  v3900-v3.txt  v3950-v3.txt
data/tests/argentera2/: 1000_0.txt  1000_1.txt  1000_2.txt  1000_3.txt  1000_4.txt  1000_5.txt  1000_6.txt  1000_7.txt  1000_8.txt  1000_9.txt  100_0.txt  100_1.txt  100_2.txt  100_3.txt  100_4.txt  100_5.txt  100_6.txt  100_7.txt  100_8.txt  100_9.txt  400_0.txt  400_1.txt  400_2.txt  400_3.txt  400_4.txt  400_5.txt  400_6.txt  400_7.txt  400_8.txt  400_9.txt
data/tests/argentera3/: 1000_0.txt  1000_1.txt  1000_2.txt  1000_3.txt  1000_4.txt  1000_5.txt  1000_6.txt  1000_7.txt  1000_8.txt  1000_9.txt  100_0.txt  (+19 more)
server1/: app.py  readme.md  server1_Dockerfile
server2/: CMakeLists.txt  app.py  server2_Dockerfile
(+175 files in other folders)
